tests/ui/attr-duplicate.stderr
error: duplicate rename attribute
 --> tests/ui/attr-duplicate.rs:5:27
  |
5 |     #[serde(rename = "A", rename = "B")]
  |                           ^^^^^^^^^^^^
